objects/ASI_TH_CRM_OutletImage__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outlet Image</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Outlet_Image</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletImage__c.ASI_CRM_JP_Outlet_Image</value>
        </filters>
        <label>All JP Outlet Image</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MO_OutletImages</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletImage__c.ASI_CRM_MO_Outlet_Image</value>
        </filters>
        <label>MO CRM Outlet Images</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_OutletImages</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletImage__c.ASI_CRM_MY_Outlet_Image</value>
        </filters>
        <label>MY CRM Outlet Images</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TH_OutletImages</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletImage__c.ASI_TH_CRM_Outlet_Image</value>
        </filters>
        <label>TH CRM Outlet Images</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_OutletImages</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletImage__c.ASI_CRM_TW_Outlet_Image</value>
        </filters>
        <label>TW CRM Outlet Images</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outlet Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet Image</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Outlet_Image</fullName>
        <active>true</active>
        <label>JP Outlet Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MO_Outlet_Image</fullName>
        <active>true</active>
        <label>MO Outlet Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Outlet_Image</fullName>
        <active>true</active>
        <label>MY Outlet Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Outlet_Image</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Outlet Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Outlet_Image</fullName>
        <active>true</active>
        <label>ASI TH CRM Outlet Image</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>